--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     border: 0px;
-    background-color: #000;
+    /*background-color: #000;*/
 }
 header{
     display: flex;
@@ -134,6 +134,47 @@ nav a:hover{
 .produto2{
     flex: 1;
     height: 600px;
-    background-color: rgb(114, 110, 107);
+    background-image: url('../image/WhatsApp-Image-2020-03-20-at-13.49.59-533x800.jpeg.crdownload');
+    background-position: center;
+    background-size: cover;
     margin: 20px;
+}
+.ing_info{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    padding: 80px;
+}
+.ing_info h1{
+    color: #fff;
+    font-size: 40px;
+    text-shadow: 0px 0px 10px #000;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.ing_info h2{
+    color: #fff;
+    font-size: 20px;
+    text-shadow: 0px 0px 10px #000;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.ing_info div{
+    font-size: 15px;
+    width: 100px;
+    padding: 5px;
+    text-align: center;
+    border: 2px solid rgb(255, 101, 0);
+    background-color: rgb(255, 101, 0);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-family: 'Fredericka the Great'; 
+    margin-top: 100px;  
+}
+.ing_info a{
+    text-decoration: none;
+    color: #fff;
+}
+.ing_info a:hover{
+    color: yellow;
 }
